--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
           <li><a href="<%= root_path %>">Inicio</a></li>
-          <li><a href="<%= root_path %>">Noticias</a></li>
+          <li><a href="<%= notices_path %>">Noticias</a></li>
           <li><a href="<%= root_path %>">Eventos</a></li>
           <li><a href="<%= root_path %>">Comunidades</a></li>
           <li><a href="<%= root_path %>">Grupos</a></li>
