--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,11 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
           <li><a href="<%= root_path %>">Inicio</a></li>
+          <li><a href="<%= root_path %>">Noticias</a></li>
+          <li><a href="<%= root_path %>">Eventos</a></li>
+          <li><a href="<%= root_path %>">Comunidades</a></li>
+          <li><a href="<%= root_path %>">Grupos</a></li>
+          <li><a href="<%= root_path %>">Actividad del sitio</a></li>
         </ul>
         <p class="navbar-text pull-right">
           <% if user_signed_in? %>
