--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,6 +17,10 @@
       <%= f.label :last_name%><br />
       <%= f.text_field :last_name, class: 'form-control' %>
     </div>
+    <div class="field">
+      <%= f.label :Localidad%><br />
+      <%= f.text_field :locate, class: 'form-control' %>
+    </div>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
