--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<% @notices.each do |n| %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%= n.title %></h3>
+  </div>
+  <div class="panel-body">
+    <%= n.description %>
+    <a href="#" class="btn btn-info pull-right">Ver más</a>
+  </div>
+</div>
+<p></p>
+<% end %>
