Añadido boton para ver noticia

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="panel-body">
     <%= n.description %>
-    <a href="#" class="btn btn-info pull-right">Ver más</a>
+    <a href="<%= notice_path(n)%>" class="btn btn-info pull-right">Ver más</a>
   </div>
 </div>
 <p></p>
