--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+//Colors
+$color-primary:#016fb8;
+$color-secondary:#FFFC00;
+$color-neutral:#FFFFFF;
+$color-dark:#000000;
+$color-danger:#FA0F33;
+
+//Well
+$well-bg:$color-neutral;
+
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+.notice{
+  h1{
+    text-align: center;
+  }
+}
