--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,33 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Notices</h1>
+<% @notices.each do |notice| %>
+  <div class="notice well">
+    <%= notice.attributes %>
+    <div class="row">
+        <h1 class="title"><%= notice.title%></h1>
+        <hr class="yellow">
+      <div class="col-md-6">
+        <div class="well">
+          <%= notice.description%>
 
-<table>
-  <thead>
-    <tr>
-      <th>City</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @notices.each do |notice| %>
-      <tr>
-        <td><%= notice.city %></td>
-        <td><%= notice.title %></td>
-        <td><%= notice.description %></td>
-        <td><%= notice.rating %></td>
-        <td><%= link_to 'Show', notice %></td>
-        <td><%= link_to 'Edit', edit_notice_path(notice) %></td>
-        <td><%= link_to 'Destroy', notice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+        </div>
+      </div>
+      <div class="col-md-6">
+      </div>
+    </div>
+  </div>
+<% end %>
 <br>
-
-<%= link_to 'New Notice', new_notice_path %>
