--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,38 +57,56 @@
         <% end %>
         <%= yield %>
       </div>
-      <div class="col-md-4">
-        <a href="<%= new_notice_path %>" class="btn btn-danger btn-block">Publicar noticia</a>
-        <hr>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">¿Que ocurre en tu ciudad?</h3>
+      <% if user_signed_in? %>
+        <div class="col-md-4">
+          <a href="<%= new_notice_path %>" class="btn btn-danger btn-block">Publicar noticia</a>
+          <hr>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">¿Que ocurre en tu ciudad?</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
           </div>
-          <div class="panel-body">
-            Panel content
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Ultimos vecinos</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">¿Necesitas ayuda?</h3>
+            </div>
+            <div class="panel-body">
+              <a href="#" class="btn btn-default btn-block">Preguntas frecuentes</a>
+              <a href="#" class="btn btn-default btn-block">Sugerencias</a>
+              <a href="#" class="btn btn-default btn-block">Contacto</a>
+            </div>
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Ultimos vecinos</h3>
-          </div>
-          <div class="panel-body">
-            Panel content
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">¿Necesitas ayuda?</h3>
-          </div>
-          <div class="panel-body">
-            <a href="#" class="btn btn-default btn-block">Preguntas frecuentes</a>
-            <a href="#" class="btn btn-default btn-block">Sugerencias</a>
-            <a href="#" class="btn btn-default btn-block">Contacto</a>
-          </div>
-        </div>
-      </div>
+      <% end %>
     </div>
   </div>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '1023220334419345',
+        xfbml      : true,
+        version    : 'v2.5'
+      });
+    };
 
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "//connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
 </body>
 </html>
