--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -2,10 +2,19 @@
 
 <% @notices.each do |notice| %>
   <div class="notice well">
-    <%= notice.attributes %>
     <div class="row">
         <h1 class="title"><%= notice.title%></h1>
         <hr class="yellow">
+      <div class="row">
+        <div class="col-md-12">
+          <center>
+            <%= image_tag "http://maps.google.com/maps/api/staticmap?size=2000x100&sensor=false&zoom=16&markers=#{notice.latitude}%2C#{notice.longitude}",
+                class:"img-responsive" %>
+          </center>
+        </div>
+      </div>
+        <hr>
+      <br>
       <div class="col-md-6">
         <div class="well">
           <%= notice.description%>
@@ -13,6 +22,8 @@
         </div>
       </div>
       <div class="col-md-6">
+            <%= image_tag "http://placehold.it/200x200",
+                class:"img-responsive" %>
       </div>
     </div>
   </div>
