--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,10 +36,10 @@
       <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
     </div>
 
-    <div class="field">
+    <!-- <div class="field">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
-    </div>
+    </div> -->
     <hr>
     <div class="actions">
       <%= f.submit "Actualizar datos", class: 'btn btn-block btn-default' %>
