--- a/app/views/notices/_form.html.erb
+++ b/app/views/notices/_form.html.erb
@@ -10,24 +10,28 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :city_id %><br>
-    <%= f.text_field :city_id %>
+<div class="row">
+  <div class="col-md-6">
+    <div class="field">
+      <%= f.label :city_id %><br>
+      <%= f.select :city_id, City.pluck(:name, :id), {}, class: 'form-control select' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="col-md-6">
+    <div class="field">
+      <%= f.label :title %><br>
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+  <div class="col-md-12">
+    <div class="field">
+      <%= f.label :description %><br>
+      <%= f.text_area :description, class: 'form-control' %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.number_field :rating %>
-  </div>
+</div>
+  <hr>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Enviar noticia', class: 'btn btn-success btn-block' %>
   </div>
 <% end %>
