--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -1,31 +1,24 @@
-<p id="notice"><%= notice %></p>
-
 <% @notices.each do |notice| %>
-  <div class="notice well">
-    <div class="row">
-        <h1 class="title"><%= notice.title%></h1>
-        <hr class="yellow">
-      <div class="row">
-        <div class="col-md-12">
-          <center>
-            <%= image_tag "http://maps.google.com/maps/api/staticmap?size=2000x100&sensor=false&zoom=16&markers=#{notice.latitude}%2C#{notice.longitude}",
-                class:"img-responsive" %>
-          </center>
+  <div class="row">
+    <div class="col-md-3 text-center" style="background:rgb(152, 231, 138); border-radius: 10px; padding:3%">
+      <a href="#">
+        <%= image_tag(notice.user.avatar, class: 'img-responsive img-circle', style: 'margin: 0 auto;') %>
+        <strong><%= notice.user.first_name %></strong><br>
+      </a>
+      <strong><%= notice.user.points %></strong> puntos
+      <hr>
+        <a class="btn btn-primary btn-block" role="button" data-toggle="collapse" href="#collapse<%=notice.id%>" aria-expanded="false" aria-controls="collapse<%=notice.id%>">
+          Ver lugar
+        </a>
+        <a href="#" class="btn btn-info btn-block">Recomendar</a>
+        <a href="#" class="btn btn-warning btn-block">Denunciar</a>
+    </div>
+    <div class="col-md-9 well">
+        <h1><%= notice.title %></h1>
+        <p><%= notice.description%></p>
+        <div class="collapse" id="collapse<%=notice.id%>">
+          <%= image_tag "http://maps.google.com/maps/api/staticmap?size=2000x200&sensor=false&zoom=16&markers=#{notice.latitude}%2C#{notice.longitude}", class:"img-responsive img-thumbnail" %>
         </div>
-      </div>
-        <hr>
-      <br>
-      <div class="col-md-6">
-        <div class="well">
-          <%= notice.description%>
-
-        </div>
-      </div>
-      <div class="col-md-6">
-            <%= image_tag "http://placehold.it/200x200",
-                class:"img-responsive" %>
-      </div>
     </div>
   </div>
 <% end %>
-<br>
