--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,14 @@
           <hr>
           <div class="panel panel-default">
             <div class="panel-heading">
+              <h3 class="panel-title">Mis medallas</h3>
+            </div>
+            <div class="panel-body">
+              Panel content
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading">
               <h3 class="panel-title">¿Que ocurre en tu ciudad?</h3>
             </div>
             <div class="panel-body">
