--- a/app/views/notices/new.html.erb
+++ b/app/views/notices/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Notice</h1>
-
+<div class="alert alert-warning alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Aviso!</strong> Necesitamos tu localización para saber donde ha ocurrido la noticia
+</div>
+<h1>Crear noticia</h1>
 <%= render 'form' %>
