--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -10,16 +10,23 @@
       <strong><%= notice.created_at.strftime("%e %b %Y %H:%M:%S%p") %></strong>
       <hr>
         <a class="btn btn-primary btn-block" role="button" data-toggle="collapse" href="#collapse<%=notice.id%>" aria-expanded="false" aria-controls="collapse<%=notice.id%>">
-          Ver lugar
+          Ver situacion
         </a>
-        <a href="#" class="btn btn-info btn-block">Recomendar</a>
+        <a href="#" class="btn btn-info btn-block">Compartir</a>
         <a href="#" class="btn btn-warning btn-block">Denunciar</a>
     </div>
     <div class="col-md-9 well">
         <h1> <%= notice.title %> <small><%= notice.city.name %></small></h1>
         <p><%= notice.description%></p>
         <div class="collapse" id="collapse<%=notice.id%>">
-          <%= image_tag "http://maps.google.com/maps/api/staticmap?size=2000x200&sensor=false&zoom=16&markers=#{notice.latitude}%2C#{notice.longitude}", class:"img-responsive img-thumbnail" %>
+          <div class="col-md-12">
+            <h2>Fotografia tomada por el usuario</h2>
+            <%= image_tag notice.image, class:"img-responsive img-thumbnail" %>
+          </div>
+          <div class="col-md-12">
+            <h2>Localizacion de la noticia</h2>
+            <%= image_tag "http://maps.google.com/maps/api/staticmap?size=2000x200&sensor=false&zoom=16&markers=#{notice.latitude}%2C#{notice.longitude}", class:"img-responsive img-thumbnail" %>
+          </div>
         </div>
     </div>
   </div>
