--- a/app/views/notices/_form.html.erb
+++ b/app/views/notices/_form.html.erb
@@ -29,7 +29,7 @@
   <div class="col-md-6">
     <div class="field">
       <%= f.label :city_id %><br>
-      <%= f.select :city_id, City.pluck(:name, :id), {}, class: 'form-control select' %>
+      <%= f.select :city_id, City.pluck(:name, :id), {}, class: 'form-control' %>
     </div>
   </div>
   <div class="col-md-6">
