--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,3 +54,7 @@ $well-bg:$color-neutral;
  h1, h2, h3 {
    font-family: roboto-slab;
  }
+
+ .img-back {
+   background-image: url('../background.jpg');
+ }
