--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="field">
       <%= f.label :Localidad%><br />
-      <%= f.text_field :locate, class: 'form-control' %>
+      <%= f.select :city_id, City.pluck(:name, :id), {}, class: 'form-control select2' %>
     </div>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -58,5 +58,4 @@
 
     <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-    <%= link_to "Back", :back %>
   </div>
