--- a/app/views/notices/_form.html.erb
+++ b/app/views/notices/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@notice, html: { multipart: true }) do |f| %>
   <p>
     <label>Sube una foto</label>
-    <div class="row">
+    <div class="row well">
       <div class="col-md-6">
         <%= image_tag(@notice.image) if @notice.image? %>
         <%= f.file_field :image, id:"imgInp", accept:"image/*", capture:"camera" %>
@@ -25,7 +25,7 @@
       </ul>
     </div>
   <% end %>
-<div class="row">
+<div class="row well">
   <div class="col-md-6">
     <div class="field">
       <%= f.label "Tu ciudad" %><br>
@@ -34,20 +34,20 @@
   </div>
   <div class="col-md-6">
     <div class="field">
-      <%= f.label "Que ha pasado??" %><br>
+      <%= f.label "Titulo" %><br>
       <%= f.text_field :title, class: 'form-control' %>
     </div>
   </div>
   <div class="col-md-12">
     <div class="field">
-      <%= f.label "Cuentanos mas!" %><br>
+      <%= f.label "¡Cuentanos mas!" %><br>
       <%= f.text_area :description, class: 'form-control' %>
     </div>
   </div>
 </div>
   <hr>
   <div class="actions">
-    <%= f.submit 'Enviar noticia', class: 'btn btn-success btn-block' %>
+    <%= f.submit 'Reportar', class: 'btn btn-success btn-block' %>
   </div>
   <br>
   <br>
