--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Noticias</h1>
+<h1>Noticias en <%=current_user.city.name if current_user.city.present? %></h1>
 <table class="table table-striped">
   <thead>
     <th>
