--- a/app/views/notices/index.html.erb
+++ b/app/views/notices/index.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="col-md-9 well">
         <h1> <%= notice.title %> <small><%= notice.city.name %></small></h1>
-        <small>Votos: <%= notice.get_rating%></small>
+        <small>Votos: <%= notice.rating%></small>
         <p><%= notice.description%></p>
         <div class="collapse" id="collapse<%=notice.id%>">
           <div class="col-md-12">
